Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,9 +26,9 @@ stages:
         effectivePomSkip: false
         sonarQubeRunAnalysis: false
 
-    - task: WhiteSource@21
-      inputs:
-        cwd: '$(System.DefaultWorkingDirectory)'
+    #- task: WhiteSource@21
+    #  inputs:
+    #    cwd: '$(System.DefaultWorkingDirectory)'
 
     - task: CopyFiles@2
       inputs:
