Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,13 +62,13 @@ stages:
                 scriptLocation: 'inlineScript'
                 inlineScript: |
                   # Create a resource group
-                  az group create --location northeurope --name ${rg}
+                  az group create --location northeurope --name $(rg)
                   
                   # Create an app service plan of type Linux
-                  az appservice plan create -g ${rg} -n myapp-service-plan --is-linux
+                  az appservice plan create -g $(rg) -n myapp-service-plan --is-linux
                   
                   # Create an App Service from the plan with Java SE as the runtime
-                  az webapp create -g ${rg} -p myapp-service-plan -n zak-sudcloud --runtime "JAVA|8-jre8"
+                  az webapp create -g $(rg) -p myapp-service-plan -n zak-sudcloud --runtime "JAVA|8-jre8"
             
             - task: AzureRmWebAppDeployment@4
               inputs:
